--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -11,7 +11,7 @@
   <nav id='main' class='navbar navbar-inverse'>
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class='navbar-brand' href=""><img id='icon' src="../../media/articles/icon.png" alt="de icon"></a>
+        <a class='navbar-brand' href=""><img id='icon' src="../../media/photos/icon.png" alt="de icon"></a>
       </div>
       <!-- Adding a search form -->
       <div class="col-sm-4">
