--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/nav.css' %}"> -->
 </head>
 <body>
   <nav id='main' class='navbar navbar-inverse'>
