--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -17,7 +17,7 @@
       <div class="col-sm-4">
         <form id='search' class='navbar-right' class='navbar-form' role='search' action="">
           <div class="input-group">
-            <input type="text" class='form-control' placeholder="Search Location" name='location'>
+            <input type="text" class='form-control' placeholder="Search Category" name='location'>
             <div class="input-group-btn">
               <button id='searchButton' class='btn btn-default' type='submit'>Search</button>
             </div>
