--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -3,5 +3,21 @@
 {% block content %}
 {{block.super}}
 
-<h1>Hi. I'm the pics template- up and working!</h1>
+<div class="container">
+  {% for pic in pics %}
+  <div class="row">
+    <div class="col-lg-4">
+      <img src="{{pic}}" class='img-responsive' alt="Pic">
+      <h1>{{pic}}</h1>
+    </div>
+  </div>
+  {% empty %}
+  <div class="row">
+    <h2>There ain't shit to show</h2>
+  </div>
+  {% endfor %}
+</div>
+
+<h1>hijwcevf eijnbgnvcom</h1>
+
 {% endblock %}
