--- a/images/templates/all/base.html
+++ b/images/templates/all/base.html
@@ -14,6 +14,7 @@
   {% endblock %}
 </head>
 <body>
+<a href="#" id=back-to-top>&uarr;</a>
   <div class="bg">
     <div class="container">
       {% include 'navbar.html' %}
