i have added changes to the navbar that allow for the locations to be filtered

--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -12,6 +12,11 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class='navbar-brand' href="{% url 'default' %}"><img id='icon' src="../../media/photos/icon.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/usa.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/germany.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/italy.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/brazil.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/kenya.png" alt="de icon"></a>
       </div>
       <!-- Adding a search form -->
       <div class="col-sm-4">
