--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -4,50 +4,32 @@
 {% block content %}
 {{block.super}}
 
-{% for pic in pics %}
 <div class="row">
-  <div class='col-xs-12 col-sm-6 col-md-4 col-lg-4'>
-      <img onclick="document.getElementById('details').style.display='block'" class='uploads' src="{{pic.image.url}}" alt="Picture">
+  <div class="col-lg-4">
+    {% for pic in pics %}
+    <img data-toggle="modal" data-target="#myModal" class='uploads' src="{{pic.image.url}}" alt="Picture">
   </div>
 </div>
 
-<div class="container">
-  <div id="details">
-    <span onclick="document.getElementById('details').style.display='none'">&times;</span>
-    <p>{{pic.image_name}}</p>
-    <p>{{pic.image_description}}</p>
-    <p>{{pic.pub_date}}</p>
-    <p>{{pic.location}}</p>
-  </div>
-</div>
-
-<div class="container">
-  <h2>Modal Example</h2>
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 style='text-align:center;' class="modal-title">Image Details</h4>
       </div>
-
+      <div class="modal-body">
+        <p><span style='font-weight:bold;'>Title:</span> {{pic.image_name}}</p>
+        <p><span style='font-weight:bold;'>Description:</span> {{pic.image_description}}</p>
+        <p><span style='font-weight:bold;'>Date Published:</span> {{pic.pub_date}}</p>
+        <p><span style='font-weight:bold;'>Taken In:</span> {{pic.location}}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
-
 </div>
+
 
 {% endfor %}
 {% endblock %}
