--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -11,6 +11,12 @@
   height: 70px;
 }
 
+.locations {
+  width: 50px;
+  height: 50px;
+  
+}
+
 .col-sm-4{
   margin-top: 13px;
   position: absolute;
