successfully implemented the location filters

--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class='navbar-brand' href="{% url 'default' %}"><img id='icon' src="../../media/photos/icon.png" alt="de icon"></a>
-        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/usa.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'filter-usa' %}"><img class='locations' src="../../media/photos/usa.png" alt="de icon"></a>
         <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/germany.png" alt="de icon"></a>
         <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/italy.png" alt="de icon"></a>
         <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/brazil.png" alt="de icon"></a>
