in the process of changing image styling

--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -13,10 +13,10 @@
       <div class="navbar-header">
         <a class='navbar-brand' href="{% url 'default' %}"><img id='icon' src="../../media/photos/icon.png" alt="de icon"></a>
         <a class='navbar-brand' href="{% url 'filter-usa' %}"><img class='locations' src="../../media/photos/usa.png" alt="de icon"></a>
-        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/germany.png" alt="de icon"></a>
-        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/italy.png" alt="de icon"></a>
-        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/brazil.png" alt="de icon"></a>
-        <a class='navbar-brand' href="{% url 'default' %}"><img class='locations' src="../../media/photos/kenya.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'filter-germany' %}"><img class='locations' src="../../media/photos/germany.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'filter-italy' %}"><img class='locations' src="../../media/photos/italy.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'filter-brazil' %}"><img class='locations' src="../../media/photos/brazil.png" alt="de icon"></a>
+        <a class='navbar-brand' href="{% url 'filter-kenya' %}"><img class='locations' src="../../media/photos/kenya.png" alt="de icon"></a>
       </div>
       <!-- Adding a search form -->
       <div class="col-sm-4">
