--- a/images/templates/all/base.html
+++ b/images/templates/all/base.html
@@ -16,7 +16,7 @@
 <body>
 <a href="#" id=back-to-top>&uarr;</a>
   <div class="bg">
-    <div class="container">
+    <div id='container' class="container">
       {% include 'navbar.html' %}
       <h1 id='headliner' class='text-center'>Jallery</h1>
     </div>
