--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -1,35 +1,39 @@
 {% extends 'all/base.html' %}
-
+{% load bootstrap3 %}
+{% load static %}
 
 {% block content %}
 {{block.super}}
 
-<div class="row">
-  <div class="col-lg-4">
-    {% for pic in pics %}
-    <img data-toggle="modal" data-target="#myModal" class='uploads' src="{{pic.image.url}}" alt="Picture">
-  </div>
-</div>
-
-<div class="modal fade" id="myModal" role="dialog">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 style='text-align:center;' class="modal-title">Image Details</h4>
-      </div>
-      <div class="modal-body">
-        <p><span style='font-weight:bold;'>Title:</span> {{pic.image_name}}</p>
-        <p><span style='font-weight:bold;'>Description:</span> {{pic.image_description}}</p>
-        <p><span style='font-weight:bold;'>Date Published:</span> {{pic.pub_date}}</p>
-        <p><span style='font-weight:bold;'>Taken In:</span> {{pic.location}}</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      {% for pic in pics %}
+      <img data-toggle="modal" data-target="#myModal" class='uploads' src="{{pic.image.url}}" alt="Picture">
     </div>
   </div>
 </div>
 
+<div class="container">
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 style='text-align:center;' class="modal-title">Image Details</h4>
+        </div>
+        <div class="modal-body">
+          <p><span style='font-weight:bold;'>Title:</span> {{pic.image_name}}</p>
+          <p><span style='font-weight:bold;'>Description:</span> {{pic.image_description}}</p>
+          <p><span style='font-weight:bold;'>Date Published:</span> {{pic.pub_date}}</p>
+          <p><span style='font-weight:bold;'>Taken In:</span> {{pic.location}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endfor %}
 {% endblock %}
