--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,7 +11,7 @@ html {
   background-size: cover;
 }
 
-.container {
+#container {
   position:absolute;
   background-color: black;
   height: 80px;
