have added the search functionality

--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -27,6 +27,7 @@
           <p><span style='font-weight:bold;'>Description:</span><h6 id='description'></h6></p>
           <p><span style='font-weight:bold;'>Date Published:</span><h6 id='pub_date'></h6></p>
           <p><span style='font-weight:bold;'>Taken In:</span><h6 id='location'></h6></p>
+          <p id='link'><a></a></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
