--- a/images/templates/all/search.html
+++ b/images/templates/all/search.html
@@ -3,9 +3,9 @@
 <div class="container">
   <div class="row">
     {% if pics %}
-    <h2 style='text-align:center;'>Found {{pics|length }} of that location</h2>
+    <h2 style='text-align:center;'>Found {{pics|length }}</h2>
     {% else %}
-    <h2 style='text-align:center;'>There are no pictures from there currently</h2>
+    <h2 style='text-align:center;'>There are no such pictures</h2>
     {% endif %}
   </div>
   <div class="row">
