--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -14,7 +14,7 @@
 .locations {
   width: 50px;
   height: 50px;
-  
+  margin-left:auto;
 }
 
 .col-sm-4{
@@ -44,3 +44,35 @@
   font-family: Roboto,
     sans-serif;
 }
+
+@media screen and (max-width: 600px) {
+  #icon {
+    margin-left:-20px;
+    margin-top:5px;
+    width: 40px;
+    height: 40px;
+  }
+
+  .locations {
+    margin-top:20px;
+    width: 15px;
+    height: 15px;
+    margin-left: auto;
+  }
+
+  .col-sm-4 {
+    width:25px;
+    margin-right:60px;
+    margin-top:-30px;
+  }
+
+  #searchButton {
+    color: white;
+    font-family: Roboto,
+      sans-serif;
+    height: 10px;
+    font-size:0px;
+  }
+
+}
+
