--- a/images/templates/all/base.html
+++ b/images/templates/all/base.html
@@ -24,7 +24,7 @@
   {% block content %}
   {% endblock %}
   {% block scripts %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="../../../static/js/jquery-3.3.1.js"></script>
   <script src="../../../static/js/base.js"></script>
   {% bootstrap_javascript %}
   {% endblock %}
