added the animations to the modal

--- a/images/templates/all/base.html
+++ b/images/templates/all/base.html
@@ -8,6 +8,7 @@
   {% block styles %}
   {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <link rel="shortcut icon" href="../../../media/photos/title.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
