--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -9,38 +9,30 @@
   <div class="grid-item">
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
       {% for pic in pics %}
-      <img onclick='showModal("{{pic.image_name}}", "{{pic.image_description}}", "{{pic.pub_date}}", "{{pic.location}}", "{{pic.image.url}}")' class='uploads' src="{{pic.image.url}}"
+      <img data-target='#myModal' onclick='showModal("{{pic.image_name}}", "{{pic.image_description}}", "{{pic.pub_date}}", "{{pic.location}}", "{{pic.image.url}}")' class='uploads' src="{{pic.image.url}}"
   alt="Picture">
     </div>
   </div>
 </div>
 
-<div class="container">
+<div id='modal-container' class="container">
   <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h4 style='text-align:center;' class="modal-title">Image Details</h4>
         </div>
         <div class="modal-body">
-          <p><a href='copyToClipboard()'>Copy Image Link</a></p>
+          <p><img class='img-responsive' src="" alt="Modal Image"></p>
           <p><span style='font-weight:bold;'>Title:</span><h6 id='title'></h6></p>
           <p><span style='font-weight:bold;'>Description:</span><h6 id='description'></h6></p>
           <p><span style='font-weight:bold;'>Date Published:</span><h6 id='pub_date'></h6></p>
           <p><span style='font-weight:bold;'>Taken In:</span><h6 id='location'></h6></p>
-          <textarea id="image_link"></textarea>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-{% block scripts %}
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-{% endblock %}
 
 {% endfor %}
 {% endblock %}
