--- a/static/css/base.css
+++ b/static/css/base.css
@@ -99,6 +99,19 @@ html {
   
 }
 
+.fade-scale {
+  transform: scale(0);
+  opacity: 0;
+  -webkit-transition: all .25s linear;
+  -o-transition: all .25s linear;
+  transition: all .25s linear;
+}
+
+.fade-scale.in {
+  opacity: 1;
+  transform: scale(1);
+}
+
 @media screen and (max-width: 600px) {
   #headliner{
     font-size:80px;
