--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,12 +20,13 @@ html {
 }
 
 .grid{
-  display:grid;
-  grid-gap:5px;
+  display: grid;
+  grid-gap:10px;
   grid-template-columns: repeat(auto-fill, minmax(250px, 10fr));
 }
 .grid-item{
-  width:30%;
+  margin-left:16.5%;
+  width:33.33%;
   padding:5px;
   position:relative;
 }
@@ -93,23 +94,6 @@ html {
   height: 2000px;
 }
 
-#uploads{
-  /* Prevent vertical gaps */
-  line-height: 4px;
-
-  -webkit-column-count: 3;
-  -webkit-column-gap: 4px;
-  -moz-column-count: 3;
-  -moz-column-gap: 4px;
-  column-count: 3;
-  column-gap: 4px;
-
-  /* Just in case there are inline attributes */
-  width: 100% !important;
-  height: auto !important;
-  
-}
-
 .fade-scale {
   transform: scale(0);
   opacity: 0;
@@ -126,37 +110,5 @@ html {
 @media screen and (max-width: 600px) {
   #headliner{
     font-size:80px;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #uploads {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  #uploads {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  #uploads {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  #uploads {
-    -moz-column-count: 1;
-    -webkit-column-count: 1;
-    column-count: 1;
   }
 }
