the copy link functionality is completely functional

--- a/images/templates/all/pics.html
+++ b/images/templates/all/pics.html
@@ -18,10 +18,10 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 style='text-align:center;' class="modal-title">Image Details</h4>
+          <h4 style='text-align:center;' id='trueLink' onclick='copyLink()' class="modal-title">Copy Link</h4>
         </div>
         <div class="modal-body">
-          <p><span style='font-weight:bold;'>Link:</span><h6 id='link'></h6></p>
+          <p><input type="text" id='link'></p>
           <p><img class='img-responsive' src="" alt="Modal Image"></p>
           <p><span style='font-weight:bold;'>Title:</span><h6 id='title'></h6></p>
           <p><span style='font-weight:bold;'>Description:</span><h6 id='description'></h6></p>
