--- a/images/templates/all/search.html
+++ b/images/templates/all/search.html
@@ -1,4 +1,5 @@
 {% extends 'all/base.html' %}
+{% load bootstrap3 %}
 {% load static %}
 
 {% block content %}
@@ -7,7 +8,7 @@
 <div class="container">
   <div class="row">
     {% if pics %}
-    <h2 style='text-align:center;'>Found {{pics|length }}</h2>
+    <h2 style='text-align:center;'>Found {{pics|length }} Results</h2>
     {% else %}
     <h2 style='text-align:center;'>There are no such pictures. You will be redirected to the main page in: <span id="counter">7</span></h2>
     <script>
@@ -27,10 +28,10 @@
 <div class="grid">
   {% if pics %}
   {% for pic in pics %}
-  <div class="grid-item">
+  <section class="grid-item">
     <img src="{{pic.image.url}}" alt="Searched Pic">
-  </div>
-  {% endfor %}
-  {% endif %}
+  </section>
 </div>
+{% endfor %}
+{% endif %}
 {% endblock %}
