--- a/static/css/base.css
+++ b/static/css/base.css
@@ -121,3 +121,63 @@ html {
     font-size:80px;
   }
 }
+
+@media (max-width: 1200px) {
+  .grid {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 10fr));
+  }
+
+  .grid-item {
+    margin-left: 16.5%;
+    width: 33.33%;
+    padding: 5px;
+    position: relative;
+  }
+}
+
+@media (max-width: 1000px) {
+ .grid {
+   display: grid;
+   grid-gap: 10px;
+   grid-template-columns: repeat(auto-fill, minmax(250px, 10fr));
+ }
+
+ .grid-item {
+   margin-left: 16.5%;
+   width: 33.33%;
+   padding: 5px;
+   position: relative;
+ }
+}
+
+@media (max-width: 800px) {
+  .grid {
+    display: block;
+    grid-gap: 0px;
+    grid-template-columns: repeat(auto-fill, minmax(125px, 5fr));
+    overflow: none;
+  }
+
+  .grid-item {
+    width:300px;
+    height:600px;
+    overflow:hidden;
+  }
+}
+
+@media (max-width: 400px) {
+  .grid {
+    display: block;
+    grid-gap: 0px;
+    grid-template-columns: repeat(auto-fill, minmax(125px, 5fr));
+    overflow: none;
+  }
+
+  .grid-item {
+    width:300px;
+    height:600px;
+    overflow:hidden;
+  }
+}
